unifying icons for ui and radial menu
Former-commit-id: bc76fb0033936ef060b93592f5c7e9a18b70a3fe

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -1161,37 +1161,37 @@
 		</div>
 		<div id="menuUI">
 			<div id="sage2pointerContainer" class="uiButton">
-				<img id="sage2pointer" alt="pointer" src="images/sage2pointer.svg" width="48" height="48" />
+				<img id="sage2pointer" alt="pointer" src="images/ui/[graycircle]-sage2pointer.svg" width="48" height="48" />
 				<p id="sage2pointerLabel">SAGE2 Pointer</p>
 			</div>
 			<div id="sharescreenContainer" class="uiButton">
-				<img id="sharescreen" alt="sharescreen" src="images/sharescreen.svg" width="48" height="48" />
+				<img id="sharescreen" alt="sharescreen" src="images/ui/[graycircle]-sharescreen.svg" width="48" height="48" />
 				<p id="sharescreenLabel">Share Screen</p>
 			</div>
 			<div id="applauncherContainer" class="uiButton">
-				<img id="applauncher" alt="applauncher" src="images/applauncher.svg" width="48" height="48"/>
+				<img id="applauncher" alt="applauncher" src="images/ui/[graycircle]-applauncher.svg" width="48" height="48"/>
 				<p id="applauncherLabel">App Launcher</p>
 			</div>
 			<div id="mediabrowserContainer" class="uiButton">
-				<img id="mediabrowser" alt="mediabrowser" src="images/mediabrowser.svg" width="48" height="48"/>
+				<img id="mediabrowser" alt="mediabrowser" src="images/ui/[graycircle]-mediabrowser.svg" width="48" height="48"/>
 				<p id="mediabrowserLabel">Media Browser</p>
 			</div>
 		<!-- browser commented out for now
 			<div id="browserContainer" class="uiButton">
-				<img id="browser" alt="browser" src="images/browser.svg" width="48" height="48"/>
+				<img id="browser" alt="browser" src="images/ui/[graycircle]-browser.svg" width="48" height="48"/>
 				<p id="browserLabel">Web browser</p>
 			</div>
 		-->
 			<div id="arrangementContainer" class="uiButton">
-				<img id="arrangement" alt="arrangement" src="images/arrangement.svg" width="48" height="48"/>
+				<img id="arrangement" alt="arrangement" src="images/ui/[graycircle]-arrangement.svg" width="48" height="48"/>
 				<p id="arrangementLabel">Arrangement</p>
 			</div>
 			<div id="settingsContainer" class="uiButton">
-				<img id="settings" alt="settings" src="images/settings.svg" width="48" height="48"/>
+				<img id="settings" alt="settings" src="images/ui/[graycircle]-settings.svg" width="48" height="48"/>
 				<p id="settingsLabel">Settings</p>
 			</div>
 			<div id="infoContainer" class="uiButton">
-				<img id="info" alt="info" src="images/info.svg" width="48" height="48"/>
+				<img id="info" alt="info" src="images/ui/[graycircle]-info.svg" width="48" height="48"/>
 				<p id="infoLabel">Information</p>
 			</div>
 		</div>
@@ -1284,15 +1284,15 @@
 	<div id="arrangementDialog" class="dialog">
 		<div id="arrangementItems">
 			<div id="clearcontentContainer">
-				<img alt="clearcontent" id="clearcontent" src="images/clearcontent.svg" width="64" height="64"/>
+				<img alt="clearcontent" id="clearcontent" src="images/ui/[graycircle]-clearcontent.svg" width="64" height="64"/>
 				<p>Clear All</p>
 			</div>
 			<div id="tilecontentContainer">
-				<img alt="tilecontent" id="tilecontent" src="images/tilecontent.svg" width="64" height="64"/>
+				<img alt="tilecontent" id="tilecontent" src="images/ui/[graycircle]-tilecontent.svg" width="64" height="64"/>
 				<p>Tile Content</p>
 			</div>
 			<div id="savesessionContainer">
-				<img alt="savesession" id="savesession" src="images/savesession.svg" width="64" height="64"/>
+				<img alt="savesession" id="savesession" src="images/ui/[graycircle]-savesession.svg" width="64" height="64"/>
 				<p>Save Session</p>
 			</div>
 		</div>
@@ -1305,15 +1305,15 @@
 	<div id="infoDialog" class="dialog">
 		<div id="infoItems">
 			<div id="helpContainer">
-				<img alt="helpcontent" id="helpcontent" src="images/help.svg" width="64" height="64"/>
+				<img alt="helpcontent" id="helpcontent" src="images/ui/[graycircle]-help.svg" width="64" height="64"/>
 				<p>Help</p>
 			</div>
 			<div id="adminContainer">
-				<img alt="admincontent" id="admincontent" src="images/admin.svg" width="64" height="64"/>
+				<img alt="admincontent" id="admincontent" src="images/ui/[graycircle]-admin.svg" width="64" height="64"/>
 				<p>Admin</p>
 			</div>
 			<div id="informationContainer">
-				<img alt="infocontent" id="infocontent" src="images/info.svg" width="64" height="64"/>
+				<img alt="infocontent" id="infocontent" src="images/ui/[graycircle]-info.svg" width="64" height="64"/>
 				<p>Info</p>
 			</div>
 		</div>
@@ -1405,7 +1405,7 @@
 			<div id="sage2MobileLeftButton"></div>
 			<div id="sage2MobileRightButton"></div>
 		</div>
-		<img alt="closeMobileSAGE2Pointer" id="closeMobileSAGE2Pointer" src="images/close.svg" width="32" height="32" style="position:absolute; left:6px; top:6px;"/>
+		<img alt="closeMobileSAGE2Pointer" id="closeMobileSAGE2Pointer" src="images/closemobilepointer.svg" width="32" height="32" style="position:absolute; left:6px; top:6px;"/>
 	</div>
 	
 	
