Fix: Widget position updates properly after reappear.
Former-commit-id: c798ec395b79a7a95daf588ece0ba1ac72926cb1

--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -585,9 +585,14 @@
 			var eLeft = position_data.elemLeft - ui.offsetX;
 			var eTop = position_data.elemTop - ui.offsetY;
 			var selectedControl = document.getElementById(position_data.elemId);
-
-			selectedControl.style.left = eLeft.toString() + "px";
-			selectedControl.style.top = eTop.toString() + "px";
+			if (selectedControl !== undefined && selectedControl !== null){
+				selectedControl.style.left = eLeft.toString() + "px";
+				selectedControl.style.top = eTop.toString() + "px";
+			}
+			else{
+				console.log("Control not found!");
+			}
+			
 		});
 
 		wsio.on('setItemPositionAndSize', function(position_data) {
@@ -689,6 +694,7 @@
 		wsio.on('requestNewControl', function(data){
 			var dt = new Date(data.date);
 			var selectedElem = data.elemId ? document.getElementById(data.elemId) : null;
+			console.log("requestNewControl", data);
 			if (data.elemId !== undefined && data.elemId !== null){
 				if(controlItems[data.elemId+"_controls"] !== undefined){
 					var spec = controlItems[data.elemId+ "_controls"].handle.controls;
@@ -711,6 +717,7 @@
 
 		wsio.on('createControl', function(data){
 			if (controlItems[data.id].show === false) {
+				console.log("createControl", data);
 				var ctrDiv =  document.createElement("div");
 				ctrDiv.id = data.id;
 				ctrDiv.className = "windowControls";
@@ -734,7 +741,7 @@
 		});
 
 		wsio.on('requestControlId', function(data) {
-
+			console.log("requestControlID", data);
 			var ctrl  = getWidgetControlUnderPointer(data, ui.offsetX, ui.offsetY);
 			var ctrId = ctrl? ctrl.attr("id"):"";
 			var regC  = /_controls/;
@@ -779,7 +786,7 @@
 			var regexSlider = /slider/;
 			var regexButton = /button/;
 			var regexTextInput = /textInput/;
-
+			console.log("releaseControlId", data);
 			var lockedControl = lockedControlElements[data.ptrId];
 			
 			if (lockedControl){
@@ -803,6 +810,7 @@
 			
 		});
 		wsio.on('executeControlFunction', function(data){
+			console.log("executeControl", data);
 			var ctrl = getWidgetControlById(data);
 			if(ctrl){
 				var ctrId = ctrl.attr('id');
@@ -848,6 +856,7 @@
 		});
 
 		wsio.on('moveSliderKnob', function(data){
+			console.log("moveSliderKnob", data);
 			var ctrl = getWidgetControlById(data.ctrl);
 			var ctrHandle = document.getElementById(data.ctrl.appId + "_controls");
 			var widgetOffset = ctrHandle? parseInt(ctrHandle.style.left):0;
