Widget picking now works only inside the widget itself instead of the whole bounding box
Former-commit-id: a41f88aa4b0711ddef74fdbc9aa8bdebaf1266bb

--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -705,6 +705,7 @@
 							top:data.y,
 							width:size.width,
 							height:size.height,
+							barHeight: size.barHeight,
 							show: true,
 							date: dt 
 						});
