--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -156,6 +156,7 @@
 		
 		wsio.on('broadcast', function(data) {
 			if(applications[data.app] === undefined){
+				// should have better way to determine if app is loaded
 				setTimeout(function() {
 					applications[data.app][data.func](data.data);
 				}, 500);
@@ -287,13 +288,18 @@
 
 			var date = new Date(data.date);
 
+			var translate = "translate(" + data.left + "px," + data.top + "px)";
+			
 			var windowTitle = document.createElement("div");
 			windowTitle.id  = data.id + "_title";
 			windowTitle.className    = "windowTitle";
 			windowTitle.style.width  = data.width.toString() + "px";
 			windowTitle.style.height = ui.titleBarHeight.toString() + "px";
-			windowTitle.style.left   = (data.left-ui.offsetX).toString() + "px";
-			windowTitle.style.top    = (data.top-ui.offsetY).toString() + "px";
+			windowTitle.style.left   = (-ui.offsetX).toString() + "px";
+			windowTitle.style.top    = (-ui.offsetY).toString() + "px";
+			windowTitle.style.webkitTransform = translate;
+			windowTitle.style.mozTransform    = translate;
+			windowTitle.style.transform       = translate;
 			windowTitle.style.zIndex = itemCount.toString();
 			if (ui.noDropShadow===true) windowTitle.style.boxShadow = "none";
 			ui.main.appendChild(windowTitle);
@@ -316,11 +322,14 @@
 			var windowItem = document.createElement("div");
 			windowItem.id  = data.id;
 			windowItem.className      = "windowItem";
-			windowItem.style.left     = (data.left-ui.offsetX).toString() + "px";
-			windowItem.style.top      = (data.top+ui.titleBarHeight-ui.offsetY).toString() + "px";
+			windowItem.style.left     = (-ui.offsetX).toString() + "px";
+			windowItem.style.top      = (ui.titleBarHeight-ui.offsetY).toString() + "px";
+			windowItem.style.webkitTransform = translate;
+			windowItem.style.mozTransform    = translate;
+			windowItem.style.transform       = translate;
 			windowItem.style.overflow = "hidden";
 			windowItem.style.zIndex   = (itemCount+1).toString();
-			if (ui.noDropShadow===true) windowItem.style.boxShadow = "none";
+			if (ui.noDropShadow === true) windowItem.style.boxShadow = "none";
 			ui.main.appendChild(windowItem);
 			
 			// App launched in window 
@@ -578,6 +587,8 @@
 			resetIdle();
 
 			var date  = new Date(position_data.date);
+			
+			/*
 			var eLeft = position_data.elemLeft - ui.offsetX;
 			var eTop  = position_data.elemTop  - ui.offsetY;
 			
@@ -588,6 +599,18 @@
 			var selectedElem = document.getElementById(position_data.elemId);
 			selectedElem.style.left = eLeft.toString() + "px";
 			selectedElem.style.top = (eTop+ui.titleBarHeight).toString() + "px";
+			*/
+			
+			var translate = "translate(" + position_data.elemLeft + "px," + position_data.elemTop + "px)";
+			var selectedElemTitle = document.getElementById(position_data.elemId + "_title");
+			selectedElemTitle.style.webkitTransform = translate;
+			selectedElemTitle.style.mozTransform    = translate;
+			selectedElemTitle.style.transform       = translate;
+			
+			var selectedElem = document.getElementById(position_data.elemId);
+			selectedElem.style.webkitTransform = translate;
+			selectedElem.style.mozTransform    = translate;
+			selectedElem.style.transform       = translate;
 
 			var app = applications[position_data.elemId];
 			if(app !== undefined && (position_data.force || app.moveEvents === "continuous") ) {
@@ -614,7 +637,8 @@
 
 		wsio.on('setItemPositionAndSize', function(position_data) {
 			resetIdle();
-
+			
+			/*
 			var eLeft = position_data.elemLeft - ui.offsetX;
 			var eTop  = position_data.elemTop  - ui.offsetY;
 			
@@ -626,6 +650,19 @@
 			var selectedElem = document.getElementById(position_data.elemId);
 			selectedElem.style.left = eLeft.toString() + "px";
 			selectedElem.style.top  = (eTop+ui.titleBarHeight).toString() + "px";
+			*/
+			
+			var translate = "translate(" + position_data.elemLeft + "px," + position_data.elemTop + "px)";
+			var selectedElemTitle = document.getElementById(position_data.elemId + "_title");
+			selectedElemTitle.style.webkitTransform = translate;
+			selectedElemTitle.style.mozTransform    = translate;
+			selectedElemTitle.style.transform       = translate;
+			selectedElemTitle.style.width = Math.round(position_data.elemWidth).toString() + "px";
+			
+			var selectedElem = document.getElementById(position_data.elemId);
+			selectedElem.style.webkitTransform = translate;
+			selectedElem.style.mozTransform    = translate;
+			selectedElem.style.transform       = translate;
 			
 			var dragCorner = selectedElem.getElementsByClassName("dragCorner");
 			var cornerSize = Math.min(position_data.elemWidth, position_data.elemHeight) / 5;
