break video frames into pixel blocks
Former-commit-id: 76794c2027f5e92b961882d9abd99d9f64ce2da1

--- a/public_HTTPS/audioManager.html
+++ b/public_HTTPS/audioManager.html
@@ -32,7 +32,7 @@
 		
 		autoplay = true;
 		
-		wsio = new websocketIO(window.location.protocol, hostname, parseInt(port));
+		wsio = new websocketIO();
 		
 		console.log("Connected to server: ", window.location.origin);
 		
