--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -88,7 +88,7 @@
 		clientID = parseInt(getParameterByName("clientID")) || 0;
 		console.log("clientID: " + clientID);
 		
-		wsio = new websocketIO(window.location.protocol, hostname, parseInt(port));
+		wsio = new websocketIO();
 		console.log("Connected to server: ", window.location.origin);
 		
 		isMaster = false;
