--- a/public_HTTPS/drawing.html
+++ b/public_HTTPS/drawing.html
@@ -83,7 +83,7 @@
 			if(window.location.protocol == "http:" && port == "") port = "80";
 			if(window.location.protocol == "https:" && port == "") port = "443";
 			
-			wsio = new websocketIO(window.location.protocol, hostname, parseInt(port));
+			wsio = new websocketIO();
 
 			wsio.open(function() {
 				console.log("open websocket");
