--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -94,7 +94,7 @@
 		if(window.location.protocol == "http:" && port == "") port = "80";
 		if(window.location.protocol == "https:" && port == "") port = "443";
 		
-		wsio = new websocketIO(window.location.protocol, hostname, parseInt(port));
+		wsio = new websocketIO();
 		wsio.open(function() {
 			console.log("open websocket");
 			interactor = new SAGE2_interaction(wsio);
