--- a/public_HTTPS/sagePointerApp.html
+++ b/public_HTTPS/sagePointerApp.html
@@ -45,7 +45,7 @@
 		if(window.location.protocol == "http:" && port == "") port = "80";
 		if(window.location.protocol == "https:" && port == "") port = "443";
 		
-		wsio = new websocketIO(window.location.protocol, hostname, parseInt(port));
+		wsio = new websocketIO();
 		
 		wsio.open(function() {
 			console.log("open websocket");
