--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -274,6 +274,16 @@
 			}
 		});
 		
+		wsio.on('updateVideoFrame', function(data) {
+			var appId     = byteBufferToString(data, "|");
+			var blockIdx  = byteBufferToInt(data.subarray(appId.length+1, appId.length+ 3));
+			var frameIdx  = byteBufferToInt(data.subarray(appId.length+3, appId.length+ 7));
+			var date      = byteBufferToInt(data.subarray(appId.length+7, appId.length+15));
+			var yuvBuffer = data.subarray(appId.length+15, data.length);
+			
+			console.log(appId, blockIdx, frameIdx, new Date(date));
+		});
+		
 		wsio.on('updateWebpageStreamFrame', function(data) {
 			wsio.emit('receivedWebpageStreamFrame', {id: data.id, client: clientID});
 		
