added widgets for movie player
Former-commit-id: 749104bf62d35824a9415b7f96c909f4e01f55ad

--- a/public/audioManager.html
+++ b/public/audioManager.html
@@ -30,7 +30,7 @@
 		if(window.location.protocol == "http:" && port == "") port = "80";
 		if(window.location.protocol == "https:" && port == "") port = "443";
 		
-		autoplay = true;
+		autoplay = false;
 		
 		wsio = new websocketIO();
 		
