--- a/public/display.html
+++ b/public/display.html
@@ -101,7 +101,7 @@
 				sendsMediaStreamFrames: false,
 				requestsServerFiles: false,
 				sendsWebContentToLoad: false,
-				sendsVideoSynchonization: false,
+				sendsVideoSynchonization: true,
 				sharesContentWithRemoteServer: false,
 				receivesDisplayConfiguration: true,
 				receivesClockTime: true,
