updating video player to only make webgl as big as viewable portion of the app
Former-commit-id: 9438895a5f7c0d67c2532f472a9dab2028019a7d

--- a/public/display.html
+++ b/public/display.html
@@ -19,6 +19,7 @@
 <!-- External dependencies -->
 <script type="text/javascript" src="lib/pdf.js"></script>
 <script type="text/javascript" src="lib/snap.svg-min.js"></script>
+<script type="text/javascript" src="lib/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="lib/observe.poly.js"></script>
 
 <script type="text/javascript" src="src/websocket.io.js"></script>
