bottom-left button toggles play/pause. slider updates with frame index as video plays.
Former-commit-id: 7a620d7adef5e9f3e2b7f13422bc9fec7c1b33c9

--- a/public/display.html
+++ b/public/display.html
@@ -285,7 +285,7 @@
 			var yuvBuffer = data.subarray(appId.length+15, data.length);
 			
 			if(applications[appId] !== undefined && applications[appId] !== null){
-				applications[appId].textureData(blockIdx, yuvBuffer);
+				applications[appId].textureData(frameIdx, blockIdx, yuvBuffer);
 				if(applications[appId].receivedBlocks.every(isTrue) === true){
 					applications[appId].draw(new Date(date));
 					applications[appId].setValidBlocksFalse();
