movie player slider widget functional
Former-commit-id: 026a44f5ddfc4b1e6b597a9b12ea15ec42faf121

--- a/public/audioManager.html
+++ b/public/audioManager.html
@@ -181,6 +181,10 @@
 			document.getElementById(data.id + "_play").textContent = "Paused";
 		});
 		
+		wsio.on('updateVideoItemTime', function(data) {
+			document.getElementById(data.id).currentTime = data.timestamp;
+		});
+		
 		wsio.on('deleteElement', function(elem_data) {
 			deleteElement(elem_data.elemId);
 			deleteElement(elem_data.elemId + "_row");
