play pause stop and seek fully functional
Former-commit-id: b564a09b347cc5bf0cbefae16d13fffd940bde8b

--- a/public/audioManager.html
+++ b/public/audioManager.html
@@ -180,6 +180,10 @@
 			document.getElementById(data.id).pause();
 			document.getElementById(data.id + "_play").textContent = "Paused";
 		});
+		wsio.on('videoEnded', function(data) {
+			document.getElementById(data.id).pause();
+			document.getElementById(data.id + "_play").textContent = "Paused";
+		});
 		
 		wsio.on('updateVideoItemTime', function(data) {
 			document.getElementById(data.id).currentTime = data.timestamp;
