--- a/public/audioManager.html
+++ b/public/audioManager.html
@@ -138,6 +138,10 @@
 				var volume = document.createElement('td');
 				volume.id = data.id + "_volume";
 				volume.className = "videoVolume";
+				var volumeMute = document.createElement('span');
+				volumeMute.id = data.id + "_mute";
+				volumeMute.className = "videoVolumeMute";
+				volumeMute.innerHTML = "&#x2713;";
 				var volumeSlider = document.createElement('input');
 				volumeSlider.id = data.id + "_volumeSlider";
 				volumeSlider.className = "videoVolumeSlider";
@@ -147,6 +151,7 @@
 				volumeSlider.step = 1;
 				volumeSlider.value = 8;
 				volumeSlider.addEventListener('input', changeVolume, false);
+				volume.appendChild(volumeMute);
 				volume.appendChild(volumeSlider);
 				
 				var time = document.createElement('td');
@@ -183,6 +188,16 @@
 		wsio.on('videoEnded', function(data) {
 			document.getElementById(data.id).pause();
 			document.getElementById(data.id + "_play").textContent = "Paused";
+		});
+		
+		wsio.on('videoMuted', function(data) {
+			document.getElementById(data.id).muted = true;
+			document.getElementById(data.id + "_mute").innerHTML = "&#x2717;";
+		});
+		
+		wsio.on('videoUnmuted', function(data) {
+			document.getElementById(data.id).muted = false;
+			document.getElementById(data.id + "_mute").innerHTML = "&#x2713;"
 		});
 		
 		wsio.on('updateVideoItemTime', function(data) {
@@ -273,6 +288,7 @@
 				<td class="videoPlay"><b>Play/Pause</b></td>
 			</tr>
 		</table>
+		<span>&#x2713;</span>
 	</div>
 </body>
 </html>
