FIX: Restarting display clients will clear radial menus on the server CHANGE: SAGEPointer attempting to open a second radial menu will move the original one to the current pointer position
Former-commit-id: 2195fb9733c910b23bfa541b392e639a8efbbc30

--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -256,6 +256,9 @@
 			ui.createRadialMenu(menu_data);
         });
 		
+		wsio.on('showRadialMenu', function(menu_data){
+			ui.showRadialMenu(menu_data);
+        });
 		wsio.on('radialMenuEvent', function(menu_data){
 			ui.radialMenuEvent(menu_data);
 			resetIdle();
